--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Dab</string>
+
+    <string name="app_name">饭团儿</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="chaxun">查询</string>
+    <string name="zhuce">注册</string>
+    <string name="yonghuming">用户名</string>
+    <string name="querenmima">确认密码</string>
+    <string name="queding">确定</string>
+    <string name="denglu">登录</string>
+    <string name="mima">密码</string>
+    <string name="youkedenglu">游客登录</string>
+
+
 </resources>
